VirtualBox :: settings documented

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@ svgs/save.svg
 foo.png
 *.xcf
 audio
+images/cap-001.png
+images/cap-001s.png
+images/cap-002.png
+images/cap-002s.png
+images/cap-003.png
+images/cap-004.png
+images/cap-004s.png
+images/cap-005.png
+images/cap-005s.png
+images/cap-006.png
+
